# Alarma_MQTT_voice

./: .gitignore
03_android_kotlin_mqtt_app/AlarmaMqttAndroid/: README.md  alarma  build_apk_on_ubuntu.sh  demo_live_5m.sh  gradle.properties  overnight_mobile_soak.py  settings.gradle.kts  start_wifi_broker.sh
03_android_kotlin_mqtt_app/AlarmaMqttAndroid/app/: build.gradle.kts
03_android_kotlin_mqtt_app/AlarmaMqttAndroid/app/src/main/: AndroidManifest.xml
06_testing_validation_runbook/mqtt_poc_lab/: .gitignore  README.md  pyproject.toml
06_testing_validation_runbook/mqtt_poc_lab/config/: default.yaml
06_testing_validation_runbook/mqtt_poc_lab/deploy/: README.md
06_testing_validation_runbook/mqtt_poc_lab/deploy/docker/: docker-compose.yml
06_testing_validation_runbook/mqtt_poc_lab/deploy/mosquitto/config/: mosquitto.conf
06_testing_validation_runbook/mqtt_poc_lab/docs/: DEEP_ANALYSIS.md  TEST_PLAN.md
06_testing_validation_runbook/mqtt_poc_lab/scripts/: bootstrap.sh  run_smoke.sh  run_soak_4h.sh
06_testing_validation_runbook/mqtt_poc_lab/src/mqtt_poc_lab/: broker.py  cli.py  config.py  load_generator.py  logging_utils.py  models.py  monitor.py  mqtt_client.py  orchestrator.py  relay.py  status_publisher.py
07.1_android_app_voice_cmd_mqtt/AlarmaVoiceMqttAndroid/: README.md  alarma  build_apk_on_ubuntu.sh  demo_live_5m.sh  overnight_mobile_soak.py
07.1_android_app_voice_cmd_mqtt/demo/: demo_voice.sh  run_demo.py
07_HA_Voice_commands/: README.md
Repo_Alarma_CS/: deep-research-report_2.md
(+19 files in other folders)
